--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Display Flex</title>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <div class="wrapper">
+
+        <div class="nav">
+            navbar
+        </div>
+
+        <div class="middle">
+            midlle
+        </div>
+
+        <div class="foot">
+            foot..
+        </div>
+
+    </div>
     
 </body>
 </html>
