--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,18 @@
 
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
     <div class="wrapper">
 
         <div class="nav">
-            navbar
+            <img class="logo" src="./img/logo.png" alt="">
+
+            <div class="items">
+                <a href="#"> Home </a>
+                <a href="#"> About </a>
+            </div>
         </div>
 
         <div class="middle">
@@ -24,6 +31,7 @@
         </div>
 
     </div>
-    
+
 </body>
+
 </html>
