--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         </div>
 
         <div class="middle">
-            midlle
+            <div class="sidebar">
+                <ul>
+                    <li>iPod</li>
+                    <li>Mac Book</li>
+                    <li>iPhone</li>
+                    <li>AirPods</li>
+                </ul>
+            </div>
+
+            <div class="main">
+                main
+            </div>
         </div>
 
         <div class="foot">
