--- a/index.html
+++ b/index.html
@@ -33,7 +33,27 @@
             </div>
 
             <div class="main">
-                main
+                <div class="top">
+                    <img src="./img/banner.png" alt="">
+                </div>
+
+                <div class="bottom">
+                    <h1>Testimonials</h1>
+
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./img/avatar.png" alt="">
+                            <h2>Alice</h2>
+                            <p>Lorem ipsum ddfogh soiuhg dolorum? Totam,uhg dolorum? Totam,uhg dolorum? Totam,uhg dolorum? Totam,uhg dolorum? Totam,uhg dolorum? Totam, in recusandae!</p>
+                        </div>
+
+                        <div class="card">
+                            <img src="./img/avatar.png" alt="">
+                            <h2>Alice</h2>
+                            <p>Lorem ipsum ddfogh soiuhg dolorum? Totam, in recusandae!</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
